# artifacts/api-server/src/lib/session.ts
@@ -1,0 +1,9 @@
+declare module "express-session" {
+  interface SessionData {
+    userId: string;
+    username: string;
+    publicKey: string;
+  }
+}
+
+export {};
