# artifacts/api-server/src/routes/session-types.ts
@@ -1,0 +1,9 @@
+import "express-session";
+
+declare module "express-session" {
+  interface SessionData {
+    userId: string;
+    username: string;
+    publicKey: string;
+  }
+}
